<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/team_name"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:textAlignment="center"
        android:layout_weight="1.5"
        android:textSize="13sp"
        android:text="@string/kkr"
        android:textColor="@android:color/white" />

    <TextView
        android:id="@+id/score"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="@string/default_score"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:layout_gravity="center"
        android:textSize="50sp"
        android:textStyle="bold"
        android:layout_weight="2"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:layout_weight="1"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ball_label"
            android:textColor="@android:color/white"/>

        <View
            android:id="@+id/dot_1"
            android:layout_width="7dp"
            android:layout_height="7dp"
            android:layout_marginLeft="16dp"
            android:background="@drawable/circle"
            android:backgroundTint="@android:color/white"
            android:layout_gravity="center_vertical"/>

        <View
            android:id="@+id/dot_2"
            android:layout_width="7dp"
            android:layout_height="7dp"
            android:layout_marginLeft="8dp"
            android:background="@drawable/circle"
            android:backgroundTint="@android:color/white"
            android:layout_gravity="center_vertical"/>

        <View
            android:id="@+id/dot_3"
            android:layout_width="7dp"
            android:layout_height="7dp"
            android:layout_marginLeft="8dp"
            android:background="@drawable/circle"
            android:backgroundTint="@android:color/white"
            android:layout_gravity="center_vertical" />

        <View
            android:id="@+id/dot_4"
            android:layout_width="7dp"
            android:layout_height="7dp"
            android:layout_marginLeft="8dp"
            android:background="@drawable/circle"
            android:backgroundTint="@android:color/white"
            android:layout_gravity="center_vertical" />

        <View
            android:id="@+id/dot_5"
            android:layout_width="7dp"
            android:layout_height="7dp"
            android:layout_marginLeft="8dp"
            android:background="@drawable/circle"
            android:backgroundTint="@android:color/white"
            android:layout_gravity="center_vertical" />

        <View
            android:id="@+id/dot_6"
            android:layout_width="7dp"
            android:layout_height="7dp"
            android:layout_marginLeft="8dp"
            android:background="@drawable/circle"
            android:backgroundTint="@android:color/white"
            android:layout_gravity="center_vertical" />

    </LinearLayout>

</LinearLayout>

